Requisitos completados, iniciando bug squash

--- a/johnatas-henrique/css/estilo.css
+++ b/johnatas-henrique/css/estilo.css
@@ -25,7 +25,7 @@ body {
     text-align: center;
     -webkit-text-stroke: 1px black;
     color: white;
-    text-shadow: 3px 3px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+    text-shadow: 3px 3px 0 black, -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
 }
 
 .centralizar {
@@ -45,7 +45,7 @@ body {
     font-weight: bold;
     -webkit-text-stroke: 1px black;
     color: white;
-    text-shadow: 3px 3px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+    text-shadow: 3px 3px 0 black, -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
 }
 
 .caixa-texto-input {
@@ -89,15 +89,26 @@ body {
     background-color: aliceblue;
 }
 
+#img-foto {
+    width: 100%;
+    height: 100%;
+    float: left;
+}
+
 .texto-baixo {
     height: 95%;
     position: relative;
 }
 
 .texto-meme-baixo {
-    white-space: normal;
     text-align: center;
+    box-sizing: border-box;
+    width: 100%;
     padding: 0 15px;
     position: absolute;
     bottom: 0;
+    font-size: 2em;
+    -webkit-text-stroke: 1px black;
+    color: white;
+    text-shadow: 3px 3px 0 black, -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
 }
